--- a/src/FlatCombiner/CMakeLists.txt
+++ b/src/FlatCombiner/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(SOURCE_FILES
     FlatCombiner.h
     FlatCombiner.cpp
+
+    ThreadLocal.h
     )
 
 add_library(flat_combiner ${SOURCE_FILES})
