--- a/test/FlatCombineLogic/CMakeLists.txt
+++ b/test/FlatCombineLogic/CMakeLists.txt
@@ -2,8 +2,9 @@ set(LOGIC_SOURCE_FILES
     FlatCombineLogicTest.cpp
     )
 
+#set(CMAKE_CXX_FLAGS "-O2")
 add_executable(runFlatCombineLogicTest ${LOGIC_SOURCE_FILES})
-target_link_libraries(runFlatCombineLogicTest gtest gtest_main storage flat_combiner)
+target_link_libraries(runFlatCombineLogicTest gtest gtest_main storage flat_combiner logger)
 
 add_test(runFlatCombineLogicTest runFlatCombineLogicTest)
 
@@ -12,6 +13,6 @@ set(DELETE_SOURCE_FILES
         )
 
 add_executable(runFlatCombineDeleteTest ${DELETE_SOURCE_FILES})
-target_link_libraries(runFlatCombineDeleteTest gtest gtest_main storage flat_combiner)
+target_link_libraries(runFlatCombineDeleteTest gtest gtest_main storage flat_combiner logger)
 
 add_test(runFlatCombineDeleteTest runFlatCombineDeleteTest)
