--- a/test/ThreadLocal/CMakeLists.txt
+++ b/test/ThreadLocal/CMakeLists.txt
@@ -4,6 +4,6 @@ set(SOURCE_FILES
     )
 
 add_executable(runThreadLocalTests ${SOURCE_FILES})
-target_link_libraries(runThreadLocalTests gtest gtest_main flat_combiner)
+target_link_libraries(runThreadLocalTests gtest gtest_main flat_combiner logger)
 
 add_test(runThreadLocalTests runThreadLocalTests)
