--- a/test/FlatCombineLogic/CMakeLists.txt
+++ b/test/FlatCombineLogic/CMakeLists.txt
@@ -2,9 +2,8 @@ set(LOGIC_SOURCE_FILES
     FlatCombineLogicTest.cpp
     )
 
-#set(CMAKE_CXX_FLAGS "-O2")
 add_executable(runFlatCombineLogicTest ${LOGIC_SOURCE_FILES})
-target_link_libraries(runFlatCombineLogicTest gtest gtest_main storage flat_combiner logger)
+target_link_libraries(runFlatCombineLogicTest gtest gtest_main logger storage flat_combiner)
 
 add_test(runFlatCombineLogicTest runFlatCombineLogicTest)
 
@@ -13,6 +12,6 @@ set(DELETE_SOURCE_FILES
         )
 
 add_executable(runFlatCombineDeleteTest ${DELETE_SOURCE_FILES})
-target_link_libraries(runFlatCombineDeleteTest gtest gtest_main storage flat_combiner logger)
+target_link_libraries(runFlatCombineDeleteTest gtest gtest_main logger storage flat_combiner)
 
 add_test(runFlatCombineDeleteTest runFlatCombineDeleteTest)
