add silly storage with global lock, add tests to it

--- a/src/GlobalLockStorage/CMakeLists.txt
+++ b/src/GlobalLockStorage/CMakeLists.txt
@@ -1,3 +1,6 @@
-set(SOURCE_FILES GlobalLockStorage.cpp)
+set(SOURCE_FILES
+        GlobalLockStorage.cpp
+        GlobalLockStorage.h
+        )
 
 add_library(global_lock_storage ${SOURCE_FILES})
