--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(./)
 
-add_subdirectory(storage)
+add_subdirectory(Storage)
 add_subdirectory(Logger)
+add_subdirectory(GlobalLockStorage)
