add global_lock_storage load test, flat combiner faster 2x

--- a/test/GlobalLockStorage/CMakeLists.txt
+++ b/test/GlobalLockStorage/CMakeLists.txt
@@ -1,9 +1,19 @@
 # build service
 set(SOURCE_FILES
-        GlobalLockStorageTest.cpp
+        GlobalLockStorageLogicTest.cpp
         )
 
-add_executable(runGlobalLockStorageTests ${SOURCE_FILES})
-target_link_libraries(runGlobalLockStorageTests gtest gtest_main global_lock_storage logger)
+add_executable(runGlobalLockStorageLogicTests ${SOURCE_FILES})
+target_link_libraries(runGlobalLockStorageLogicTests gtest gtest_main global_lock_storage logger)
 
-add_test(runGlobalLockStorageTests runGlobalLockStorageTests)
+add_test(runGlobalLockStorageLogicTests runGlobalLockStorageLogicTests)
+
+# build service
+set(SOURCE_FILES
+        GlobalLockStorageLoadTest.cpp
+        )
+
+add_executable(runGlobalLockStorageLoadTest ${SOURCE_FILES})
+target_link_libraries(runGlobalLockStorageLoadTest gtest gtest_main global_lock_storage logger)
+
+add_test(runGlobalLockStorageLoadTest runGlobalLockStorageLoadTest)
