--- a/test/FlatCombineLogic/CMakeLists.txt
+++ b/test/FlatCombineLogic/CMakeLists.txt
@@ -3,7 +3,7 @@ set(LOGIC_SOURCE_FILES
     )
 
 add_executable(runFlatCombineLogicTest ${LOGIC_SOURCE_FILES})
-target_link_libraries(runFlatCombineLogicTest gtest gtest_main logger storage)
+target_link_libraries(runFlatCombineLogicTest gtest gtest_main storage)
 
 add_test(runFlatCombineLogicTest runFlatCombineLogicTest)
 
@@ -12,6 +12,6 @@ set(DELETE_SOURCE_FILES
         )
 
 add_executable(runFlatCombineDeleteTest ${DELETE_SOURCE_FILES})
-target_link_libraries(runFlatCombineDeleteTest gtest gtest_main logger storage)
+target_link_libraries(runFlatCombineDeleteTest gtest gtest_main storage)
 
 add_test(runFlatCombineDeleteTest runFlatCombineDeleteTest)
