add array usage example, fix race condition bug in executor, tsan OK

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(ThreadLocal)
 add_subdirectory(Storage)
 add_subdirectory(FlatCombineLogic)
 add_subdirectory(GlobalLockStorage)
+add_subdirectory(ArrayUsageExample)
