add readme, small fixes

--- a/test/ArrayUsageExample/CMakeLists.txt
+++ b/test/ArrayUsageExample/CMakeLists.txt
@@ -4,6 +4,6 @@ set(SOURCE_FILES
         )
 
 add_executable(runArrayUsageExample ${SOURCE_FILES})
-target_link_libraries(runArrayUsageExample gtest gtest_main multithread_array)
+target_link_libraries(runArrayUsageExample gtest gtest_main)
 
 add_test(runArrayUsageExample runArrayUsageExample)
